other-vpol/disallow-localhost-services/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: disallow-localhost-services
spec:
  # disable templating because it can cause issues with ValidatingPolicy
  template: false
  steps:
  - name: step-01
    try:
    - apply:
        file: ../disallow-localhost-services.yaml
    - patch:
        resource:
          apiVersion: policies.kyverno.io/v1
          kind: ValidatingPolicy
          metadata:
            name: no-localhost-service
          spec:
            validationActions:
             - Deny
    - assert:
        file: policy-ready.yaml
    - sleep: 
       duration: 10s
  - name: step-02
    try:
    - apply:
        file: svc-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: svc-bad.yaml
